--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  unit-tests:
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -13,6 +13,9 @@ jobs:
 
       - name: PHPUnit Tests
         uses: php-actions/phpunit@master
+        env:
+          TEST_NAME: Test
         with:
           bootstrap: vendor/autoload.php
-          run: phpunit tests/Devknown/AlphaIDTest.php
+          configuration: test/phpunit.xml
+          args: --coverage-text
