--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,5 @@ jobs:
           TEST_NAME: Test
         with:
           bootstrap: vendor/autoload.php
-          configuration: test/phpunit.xml
+          configuration: tests/phpunit.xml
           args: --coverage-text
